// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES TRACE LEVELS trace 1 NATIVE 1`] = `
<ReactAny
  style={
    Object {
      "backgroundColor": "gray",
      "margin": 10,
      "padding": 10,
    }
  }
>
  traceLevel=1
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 1 WEB 1`] = `
<ReactAny
  className="b a"
  style={
    Object {
      "margin": 10,
    }
  }
>
  traceLevel=1
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 2 NATIVE 1`] = `
<ReactAny
  style={
    Object {
      "backgroundColor": "gray",
      "margin": 10,
      "padding": 10,
    }
  }
>
  traceLevel=2
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 2 WEB 1`] = `
<ReactAny
  className="b a"
  style={
    Object {
      "margin": 10,
    }
  }
  trace={
    Array [
      ".b { padding:10px /*.*/ }",
      ".a { background-color:gray /*root*/ }",
    ]
  }
>
  traceLevel=2
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 3 NATIVE 1`] = `
<ReactAny
  style={
    Object {
      "backgroundColor": "gray",
      "margin": 10,
      "padding": 10,
    }
  }
>
  traceLevel=3
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 3 WEB 1`] = `
<ReactAny
  className="b a"
  style={
    Object {
      "margin": 10,
    }
  }
  trace={
    Array [
      ".b { padding:10px /*.*/ }",
      ".a { background-color:gray /*root*/ }",
    ]
  }
>
  traceLevel=3
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 4 NATIVE 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": 10,
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <InnerStateComponent
    pipeState={"..."}
    pipelineState={"..."}
  >
    <TestComponentCode
      classNameX={
        Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                "padding: 10 /*.*/",
              ],
            },
          ],
          "name": ".",
        }
      }
      classes={
        Object {
          "root": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  "backgroundColor: gray /*root*/",
                ],
              },
            ],
            "name": "root",
          },
        }
      }
      styleX={
        Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                "margin: 10 /*.*/",
              ],
            },
          ],
          "name": ".",
        }
      }
    >
      <ReactAny
        style={
          Object {
            "backgroundColor": "gray",
            "margin": 10,
            "padding": 10,
          }
        }
      >
        traceLevel=4
      </ReactAny>
    </TestComponentCode>
  </InnerStateComponent>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 4 WEB 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": "10px",
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <InnerStateComponent
    pipeState={"..."}
    pipelineState={"..."}
  >
    <TestComponentCode
      classNameX={
        Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                ".b { padding:10px /*.*/ }",
              ],
            },
          ],
          "name": ".",
        }
      }
      classes={
        Object {
          "root": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  ".a { background-color:gray /*root*/ }",
                ],
              },
            ],
            "name": "root",
          },
        }
      }
      styleX={
        Object {
          "margin": 10,
        }
      }
    >
      <ReactAny
        className="b a"
        style={
          Object {
            "margin": 10,
          }
        }
        trace={
          Array [
            ".b { padding:10px /*.*/ }",
            ".a { background-color:gray /*root*/ }",
          ]
        }
      >
        traceLevel=4
      </ReactAny>
    </TestComponentCode>
  </InnerStateComponent>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 5 NATIVE 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": 10,
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <InnerStateComponent
    pipeState={Object {}}
    pipelineState={
      Object {
        "componentId": 9,
        "displayName": "TestComponent",
        "pipeStates": Array [
          Object {
            "classes": Object {
              "root": Object {
                "list": Array [
                  Object {
                    "atomicArray": Array [
                      "backgroundColor: gray /*root*/",
                    ],
                  },
                ],
                "name": "root",
              },
            },
          },
          Object {
            "classNameX": Object {
              "list": Array [
                Object {
                  "atomicArray": Array [
                    "padding: 10 /*.*/",
                  ],
                },
              ],
              "name": ".",
            },
            "classes": null,
            "codeProps": Array [
              Object {
                "children": "Text",
              },
              null,
            ],
            "styleX": Object {
              "list": Array [
                Object {
                  "atomicArray": Array [
                    "margin: 10 /*.*/",
                  ],
                },
              ],
              "name": ".",
            },
          },
          undefined,
          Object {},
        ],
        "props": Object {
          "children": "Text",
          "classNameX": Object {
            "padding": 10,
          },
          "styleX": Object {
            "margin": 10,
          },
        },
        "propsCode": Object {
          "children": "Text",
          "classNameX": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  "padding: 10 /*.*/",
                ],
              },
            ],
            "name": ".",
          },
          "classes": Object {
            "root": Object {
              "list": Array [
                Object {
                  "atomicArray": Array [
                    "backgroundColor: gray /*root*/",
                  ],
                },
              ],
              "name": "root",
            },
          },
          "styleX": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  "margin: 10 /*.*/",
                ],
              },
            ],
            "name": ".",
          },
        },
        "uniqueId": "TestComponent *19",
      }
    }
  >
    <TestComponentCode
      classNameX={
        Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                "padding: 10 /*.*/",
              ],
            },
          ],
          "name": ".",
        }
      }
      classes={
        Object {
          "root": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  "backgroundColor: gray /*root*/",
                ],
              },
            ],
            "name": "root",
          },
        }
      }
      styleX={
        Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                "margin: 10 /*.*/",
              ],
            },
          ],
          "name": ".",
        }
      }
    >
      <ReactAny
        style={
          Object {
            "backgroundColor": "gray",
            "margin": 10,
            "padding": 10,
          }
        }
      >
        traceLevel=5
      </ReactAny>
    </TestComponentCode>
  </InnerStateComponent>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 5 WEB 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": "10px",
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <InnerStateComponent
    pipeState={Object {}}
    pipelineState={
      Object {
        "componentId": 8,
        "displayName": "TestComponent",
        "pipeStates": Array [
          Object {
            "classes": Object {
              "root": Object {
                "list": Array [
                  Object {
                    "atomicArray": Array [
                      ".a { background-color:gray /*root*/ }",
                    ],
                  },
                ],
                "name": "root",
              },
            },
          },
          Object {
            "classNameX": Object {
              "list": Array [
                Object {
                  "atomicArray": Array [
                    ".b { padding:10px /*.*/ }",
                  ],
                },
              ],
              "name": ".",
            },
            "classes": null,
            "codeProps": Array [
              Object {
                "children": "Text",
              },
              null,
            ],
            "styleX": Object {
              "margin": 10,
            },
          },
          undefined,
          Object {},
        ],
        "props": Object {
          "children": "Text",
          "classNameX": Object {
            "padding": "10px",
          },
          "styleX": Object {
            "margin": 10,
          },
        },
        "propsCode": Object {
          "children": "Text",
          "classNameX": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  ".b { padding:10px /*.*/ }",
                ],
              },
            ],
            "name": ".",
          },
          "classes": Object {
            "root": Object {
              "list": Array [
                Object {
                  "atomicArray": Array [
                    ".a { background-color:gray /*root*/ }",
                  ],
                },
              ],
              "name": "root",
            },
          },
          "styleX": Object {
            "margin": 10,
          },
        },
        "uniqueId": "TestComponent *17",
      }
    }
  >
    <TestComponentCode
      classNameX={
        Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                ".b { padding:10px /*.*/ }",
              ],
            },
          ],
          "name": ".",
        }
      }
      classes={
        Object {
          "root": Object {
            "list": Array [
              Object {
                "atomicArray": Array [
                  ".a { background-color:gray /*root*/ }",
                ],
              },
            ],
            "name": "root",
          },
        }
      }
      styleX={
        Object {
          "margin": 10,
        }
      }
    >
      <ReactAny
        className="b a"
        style={
          Object {
            "margin": 10,
          }
        }
        trace={
          Array [
            ".b { padding:10px /*.*/ }",
            ".a { background-color:gray /*root*/ }",
          ]
        }
      >
        traceLevel=5
      </ReactAny>
    </TestComponentCode>
  </InnerStateComponent>
</TestComponent>
`;
